ingress/apple.yml
apiVersion: v1
kind: Pod
metadata:
  name: apple-app
  labels:
    app: apple

spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      args:
        - "-text=apple"

---
apiVersion: v1
kind: Service
metadata:
  name: apple-service
spec:
  type: NodePort
  selector:
    app: apple
  ports:
    - protocol: TCP
      port: 5678
      name: http
